integrate with api

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,7 @@
           <a href="" class="refresh-btn">Refresh</a>
         </div>
         <div class="list-container">
-          <ul class="scores-list">
-            <li class="list-item">Name: 40</li>
-            <li class="list-item">Name: 40</li>
-            <li class="list-item">Name: 40</li>
-          </ul>
+          <ul class="scores-list"></ul>
         </div>
       </div>
       <div class="right-col">
@@ -32,7 +28,7 @@
         <form>
           <input type="text" class="input-width" id="your_name" placeholder="Your name" required><br>
           <input type="number" class="input-width" id="your_score" placeholder="Your score" required><br>
-          <button type="submit" class="submit-btn">Submit</button>
+          <button type="submit" class="submit-btn" id="submit">Submit</button>
         </form>
       </div>
     </section>
